--- a/panda.ipynb
+++ b/panda.ipynb
@@ -695,14 +695,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 141,
    "outputs": [
     {
      "data": {
-      "text/plain": "      班组  D1修总成本     D1修消耗      D1修消耗比例  微机耗材总成本   微机耗材消耗  微机耗材消耗比例  \\\n班组                                                                    \n综合组  综合组   180.0    384.40     2.135556   3232.0   239.44  0.074084   \n检修组  检修组    37.0    206.78     5.588649    230.0   442.92  1.925739   \n乘务队  乘务队     5.0   9028.96  1805.792000    231.0   777.00  3.363636   \n检修队  检修队     0.0   8835.40     1.000000      0.0     0.00  0.000000   \n总    0.0   222.0  18455.54    83.133063   3693.0  1459.36  0.395169   \n\n     纸张表格、文具等办公用品总成本  纸张表格、文具等办公用品消耗  纸张表格、文具等办公用品消耗比例  \n班组                                                      \n综合组             50.0           64.76          1.295200  \n检修组             14.0            0.00          0.000000  \n乘务队              3.0            0.00          0.000000  \n检修队              0.0            0.00          0.000000  \n总               67.0           64.76          0.966567  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>班组</th>\n      <th>D1修总成本</th>\n      <th>D1修消耗</th>\n      <th>D1修消耗比例</th>\n      <th>微机耗材总成本</th>\n      <th>微机耗材消耗</th>\n      <th>微机耗材消耗比例</th>\n      <th>纸张表格、文具等办公用品总成本</th>\n      <th>纸张表格、文具等办公用品消耗</th>\n      <th>纸张表格、文具等办公用品消耗比例</th>\n    </tr>\n    <tr>\n      <th>班组</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>综合组</th>\n      <td>综合组</td>\n      <td>180.0</td>\n      <td>384.40</td>\n      <td>2.135556</td>\n      <td>3232.0</td>\n      <td>239.44</td>\n      <td>0.074084</td>\n      <td>50.0</td>\n      <td>64.76</td>\n      <td>1.295200</td>\n    </tr>\n    <tr>\n      <th>检修组</th>\n      <td>检修组</td>\n      <td>37.0</td>\n      <td>206.78</td>\n      <td>5.588649</td>\n      <td>230.0</td>\n      <td>442.92</td>\n      <td>1.925739</td>\n      <td>14.0</td>\n      <td>0.00</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>乘务队</th>\n      <td>乘务队</td>\n      <td>5.0</td>\n      <td>9028.96</td>\n      <td>1805.792000</td>\n      <td>231.0</td>\n      <td>777.00</td>\n      <td>3.363636</td>\n      <td>3.0</td>\n      <td>0.00</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>检修队</th>\n      <td>检修队</td>\n      <td>0.0</td>\n      <td>8835.40</td>\n      <td>1.000000</td>\n      <td>0.0</td>\n      <td>0.00</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.00</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>总</th>\n      <td>0.0</td>\n      <td>222.0</td>\n      <td>18455.54</td>\n      <td>83.133063</td>\n      <td>3693.0</td>\n      <td>1459.36</td>\n      <td>0.395169</td>\n      <td>67.0</td>\n      <td>64.76</td>\n      <td>0.966567</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "      班组  D1修总成本     D1修消耗     D1修消耗比例  微机耗材总成本   微机耗材消耗  微机耗材消耗比例  \\\n班组                                                                   \n综合组  综合组   180.0    384.40    2.135556   3232.0   627.94  0.194288   \n检修组  检修组    37.0   4624.48  124.985946    230.0   442.92  1.925739   \n乘务队  乘务队   111.0   9028.96   81.341982    231.0   388.50  1.681818   \n检修队  检修队   110.0   4417.70   40.160909      0.0     0.00  0.000000   \n总    0.0   438.0  18455.54   42.135936   3693.0  1459.36  0.395169   \n\n     纸张表格、文具等办公用品总成本  纸张表格、文具等办公用品消耗  纸张表格、文具等办公用品消耗比例  \n班组                                                      \n综合组             50.0           64.76          1.295200  \n检修组             14.0            0.00          0.000000  \n乘务队              3.0            0.00          0.000000  \n检修队              0.0            0.00          0.000000  \n总               67.0           64.76          0.966567  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>班组</th>\n      <th>D1修总成本</th>\n      <th>D1修消耗</th>\n      <th>D1修消耗比例</th>\n      <th>微机耗材总成本</th>\n      <th>微机耗材消耗</th>\n      <th>微机耗材消耗比例</th>\n      <th>纸张表格、文具等办公用品总成本</th>\n      <th>纸张表格、文具等办公用品消耗</th>\n      <th>纸张表格、文具等办公用品消耗比例</th>\n    </tr>\n    <tr>\n      <th>班组</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>综合组</th>\n      <td>综合组</td>\n      <td>180.0</td>\n      <td>384.40</td>\n      <td>2.135556</td>\n      <td>3232.0</td>\n      <td>627.94</td>\n      <td>0.194288</td>\n      <td>50.0</td>\n      <td>64.76</td>\n      <td>1.295200</td>\n    </tr>\n    <tr>\n      <th>检修组</th>\n      <td>检修组</td>\n      <td>37.0</td>\n      <td>4624.48</td>\n      <td>124.985946</td>\n      <td>230.0</td>\n      <td>442.92</td>\n      <td>1.925739</td>\n      <td>14.0</td>\n      <td>0.00</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>乘务队</th>\n      <td>乘务队</td>\n      <td>111.0</td>\n      <td>9028.96</td>\n      <td>81.341982</td>\n      <td>231.0</td>\n      <td>388.50</td>\n      <td>1.681818</td>\n      <td>3.0</td>\n      <td>0.00</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>检修队</th>\n      <td>检修队</td>\n      <td>110.0</td>\n      <td>4417.70</td>\n      <td>40.160909</td>\n      <td>0.0</td>\n      <td>0.00</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.00</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>总</th>\n      <td>0.0</td>\n      <td>438.0</td>\n      <td>18455.54</td>\n      <td>42.135936</td>\n      <td>3693.0</td>\n      <td>1459.36</td>\n      <td>0.395169</td>\n      <td>67.0</td>\n      <td>64.76</td>\n      <td>0.966567</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 104,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,9 +713,10 @@
     "# update_total(full, total)\n",
     "import numpy as np\n",
     "\n",
-    "total\n",
+    "\n",
     "cate = full['科目名称'].unique()\n",
     "total_new = sum_new(full)\n",
+    "# print(total_new)\n",
     "for i in range(total.shape[0]):\n",
     "    name = total.at[i,'班组']\n",
     "    if name=='车间成本':\n",
@@ -725,6 +726,9 @@
     "        cheng = total.at[i, j]\n",
     "        total_new.loc[name, j]=  cheng\n",
     "name = '总'\n",
+    "total_new = total_new.drop('总', axis=0)\n",
+    "# print(total_new)\n",
+    "# print(total_new['D1修总成本'])\n",
     "total_new.loc[name] = total_new.apply(lambda x: pd.to_numeric(x, errors='coerce').sum())\n",
     "\n",
     "\n",
@@ -733,10 +737,11 @@
     "    cost = i + '消耗'\n",
     "    rate = i + '消耗比例'\n",
     "    total_new[rate] = total_new[cost] / total_new[source]\n",
-    "total_new = total_new.fillna(0)\n",
     "total_new = total_new.replace([np.inf], 1)\n",
     "# total_new = total_new.reindex()\n",
-    "total_new"
+    "total_new = total_new.fillna(0)\n",
+    "total_new\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
